# AI-COS

./: .gitignore  AI-COS_CONSTITUTION.md  README.md  pyproject.toml
.github/workflows/: terrain-daily.yml  terrain-inbound.yml
ai_cos/: ORCHESTRATOR.md  __init__.py  cli.py  config.py  demo.py  engine.py  memory.py  orchestrator.py  orchestrator_config.json  pipeline.py  sources.py  state.py  views.py
ai_cos/brain/: __init__.py  memory.py
ai_cos/connectors/: __init__.py  automation.py  claude_code.py
ai_cos/core/: __init__.py  engine.py
ai_cos/product/: __init__.py  cli.py  config.py  demo.py  pipeline.py  views.py
ai_cos/product/connectors/: __init__.py  automation.py  (+2 more)
docs/: MODELE.md
site/: index.html
terrain/: AUTONOMIE.md  MONTPELLIER-CAMPAIGN.md  OFFRE.md  PROTOCOL.md  SETUP-SECRETS.md  autoresponder.py  campagne-montpellier.md  campaign-montpellier-cabinet.json  campaign.json  inbound_state.json  journal.json  log.md  loop.py  loop_state.json  memory.json  metrics.py  outreach.py  prospection-J2.md  prospection-pool.md  relance-J2-plus2.md  relance-prospects.md  relance_rules.py  relance_targets.json  run-montpellier.sh  run_daily.sh  runs.jsonl  state.json  velyx-rapport-demo.md  velyx-rapport-montpellier.md  velyx_report.py  velyx_signals.json
tests/: test_autoresponder.py  test_cli.py  test_compat.py  test_config.py  test_connectors.py  test_engine.py  test_knowledge.py  test_loop.py  test_orchestrator.py  test_outreach.py  test_pipeline.py  test_prototype.py  test_relance_rules.py  test_sources.py  test_stripe_links.py  test_velyx_report.py
